# penguin-ai-agent

./: .dockerignore  .env.example  .gitignore  CLI_USAGE.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  ReadME.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_auth_tests.py  run_evaluation.py  test_observability_demo.py  test_observability_simple.py  verify_auth.py  verify_maintainer.py
.github_maintainer_memory/profiles/: shubhamsugara22_AdventOfCode2024.json  shubhamsugara22_ansible.json  shubhamsugara22_community.general.json  shubhamsugara22_django.json  zulip_zulip.json  (+10 more)
docs/: ARCHITECTURE_DIAGRAM.md  AUTHENTICATION.md  DEPLOYMENT_CLOUD_RUN.md  DEPLOYMENT_VERTEX_AI.md  EVALUATION.md  OBSERVABILITY.md  RUN_INSTRUCTIONS.md  SETUP_CREDENTIALS.md  WORKING_FLOW_DIAGRAM.md  setup_env.bat  setup_env.sh
evaluation/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  evaluators.py  runner.py  test_dataset.py
examples/: analyzer_demo.py  coordinator_demo.py  evaluation_demo.py  github_tools_demo.py  maintainer_demo.py  model_demo.py
k8s/: README.md  configmap.yaml  cronjob.yaml  deployment.yaml  pvc.yaml  secrets.yaml  serviceaccount.yaml
scripts/: run_e2e_test.py
src/: __init__.py  auth.py  config.py  logging_config.py  observability.py
tests/: __init__.py  debug_analysis.py  test_agents_working.py  test_auth.py  test_config.py  test_deployment.py  test_evaluation.py  test_github_connection.py  test_integration_e2e.py  test_logging_config.py  test_maintainer.py  test_memory.py  test_models.py  test_observability.py
(+34 files in other folders)
