[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-maintainer-agent"
version = "0.1.0"
description = "AI-powered multi-agent system for GitHub repository maintenance"
readme = "ReadME.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GitHub Maintainer Agent Team"}
]
dependencies = [
    "langgraph>=0.2.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
